# ChangeLog for net-wireless/blueman
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/blueman/ChangeLog,v 1.19 2014/05/12 14:22:17 zerochaos Exp $

  12 May 2014; Rick Farina <zerochaos@gentoo.org> blueman-9999.ebuild:
  upstream merged the bluez5 branch into master

*blueman-9999 (05 May 2014)

  05 May 2014; Rick Farina <zerochaos@gentoo.org> +blueman-9999.ebuild,
  +files/blueman-9999-plugins-conf-file.patch,
  +files/blueman-9999-set-codeset-for-gettext-to-UTF-8-always.patch:
  initial commit of 9999 ebuild with bluez5 support, if we like it, we can
  snapshot

  18 Feb 2014; Michał Górny <mgorny@gentoo.org> blueman-1.21-r1.ebuild,
  blueman-1.23-r1.ebuild, blueman-1.23-r2.ebuild, blueman-1.23.ebuild:
  Require <bluez-5 since blueman does not support the new APIs.

  18 Nov 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop mobile herd as talked in gentoo-dev ML

*blueman-1.23-r2 (20 Jun 2012)

  20 Jun 2012; Tiziano Müller <dev-zero@gentoo.org> +blueman-1.23-r2.ebuild,
  blueman-1.23-r1.ebuild:
  Convert shebangs to make sure python2.7 is used and set dependency to
  python-2.7 since it does not work with python-2.6 (bug #421631).

*blueman-1.23-r1 (19 Jun 2012)

  19 Jun 2012; Tiziano Müller <dev-zero@gentoo.org> +blueman-1.23-r1.ebuild,
  +files/blueman-1.23-set-codeset-for-gettext-to-UTF-8-always.patch:
  Fix segfault with non-UTF-8 locale (bug #414871).

*blueman-1.23 (13 Jun 2012)

  13 Jun 2012; Tiziano Müller <dev-zero@gentoo.org> +blueman-1.23.ebuild,
  +files/blueman-1.23-fix-broken-status-icon.patch,
  +files/blueman-1.23-plugins-conf-file.patch, metadata.xml:
  Version bump (bug #386575, thanks to Leho Kraav for the hint for the broken
  status icon), also fixes bug #337947 by depending on the hicolor-icon-theme
  package, bug #351647 based on the patch by Vince C. and modified by me and bug
  #392241 by now using the gconf USE flag instead of gnome.
