@@ -9,6 +9,6 @@ LICENSE=LGPL-2.1
 RDEPEND=app-arch/snappy dev-libs/boost:=[threads] dev-libs/fcgi dev-libs/libaio dev-libs/libedit dev-libs/leveldb[snappy] nss? ( dev-libs/nss ) cryptopp? ( dev-libs/crypto++ ) sys-apps/keyutils sys-apps/util-linux dev-libs/libxml2 fuse? ( sys-fs/fuse ) libatomic? ( dev-libs/libatomic_ops ) xfs? ( sys-fs/xfsprogs ) zfs? ( sys-fs/zfs ) gtk? ( x11-libs/gtk+:2 dev-cpp/gtkmm:2.4 gnome-base/librsvg ) radosgw? ( dev-libs/fcgi dev-libs/expat net-misc/curl ) tcmalloc? ( dev-util/google-perftools ) || ( ( >=dev-lang/python-2.7.5-r2:2.7 ) ) || ( >=dev-lang/python-2.7.5-r2:2.7 ) sys-apps/hdparm || ( ( >=dev-lang/python-2.7.5-r2:2.7 dev-python/flask[python_targets_python2_7(-),python_single_target_python2_7(+)] dev-python/requests[python_targets_python2_7(-),python_single_target_python2_7(+)] ) )
 REQUIRED_USE=^^ ( nss cryptopp )
 SLOT=0
-SRC_URI=http://ceph.com/download/ceph-0.80.4.tar.bz2
+SRC_URI=http://ceph.com/download/ceph-0.80.5.tar.bz2
 _eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-any-r1	4560effd96d3d2a82e50af7cf87166da	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438
-_md5_=53c5b0996555ad247f6a43f90fa60b1a
+_md5_=7f5a7943249fa11d99d4e037505150d2
