@@ -8,27 +8,29 @@ AUX blueman-9999-plugins-conf-file.patch 1083 SHA256 a97c052b107beaf1c6615f47809
 AUX blueman-9999-set-codeset-for-gettext-to-UTF-8-always.patch 8717 SHA256 91f6351614a8bdbb51155399f77c384a86407deb609c9e7bb61ffac17a56d81d SHA512 524afc7729564b5355f38648840b783426cf5aeaffd1bf157f725100b780d35b7524bc81144d3453e34683ea9f7af6982176d45b4488c8176c10224f74452f4d WHIRLPOOL ed053972b26a018276c221a51893bc0b1ab7b2b15e3900905444cfce03a41dd5eade845cd3e4ce3511ebf724e5a1c4e9dbd1f5024518ad8834fa2779bd1253a1
 DIST blueman-1.21.tar.gz 1086099 SHA256 86200dab50b1595c9a9537586c07de90ccfa084b954bb74f3e8732cc000fe3af
 DIST blueman-1.23.tar.gz 1223094 SHA256 50b261bcdc2e99e176c7c194825da1259500aaacaccb92714d97af0209a4f011 SHA512 529a43dace73bf362baac69404a9e87d14f5bcb7b07b18194434c7a6c1dbc22f8fecdb4923c92a77b65656405a492b9e147e77cb7a161df4a93e8b78a003eba7 WHIRLPOOL 4070b4d86cbe743278730e4ee3022bcfdea590b5b76e545cc67912a3498de993ed0c62cb67ac2cd3ad3b8e3c17c5d5a8b1f8fa6e214234a64a784146c6d6d542
+DIST blueman-1.23_p20140717.tar.xz 1679284 SHA256 3b4bbd68e6613299b7577e6a73a9efb86fa1ee2b033e0eb5849e6acd61135fc9 SHA512 ce279aaa7ed85dedc1329534c99f0d660c00c1b887efb543f7b62217bc329c03d400f60847e01b1a25ea4dbbad8f67077b865ac484d88e0e00a4791dcd8c4156 WHIRLPOOL f1b01633062c6a779be6755e039065d7a3ebefefc26025ddc28156968ea1b39c7509ee05f077d574786293d999d586bd2e0ca1eb18da05cf3593b06b28110cc9
 EBUILD blueman-1.21-r1.ebuild 2119 SHA256 92582c07555ece8c7f8f93303d7f4434401b4428b1fce1f732cedd5c95218c97 SHA512 8772d077ada5dd05a9239b25ec9b954c8416892e03f02e09a9d5b86ba6c45d5d3716da0d2e4a512db89736f743e8ece1842c756600e3a930ca90df9f088784de WHIRLPOOL a774163d1b4e2818de848d426e464e0a797deea064c8bf3d32bd8e2dd7d264e8875719092cb6921dbaf8db3e443a49d322f2ce19d958926023e50a4b8d5c49fa
 EBUILD blueman-1.23-r1.ebuild 2396 SHA256 a321d87cc701cba2e0c1b65cf0842c37537491e4ad49f10aef6a0e3be30a3baf SHA512 cecdc9cea81aa7b7610af1f4a0fb20778a7d8f598f710505cb4bf91cbf8df40a6875e4663ae989db7de65d132d0c838276d9090a840ba9f45edb95499ed439a0 WHIRLPOOL 3219f874b6ca9aaa6af9caf923ae54d6f14379215d5da540e60972d4d3c1f6ef6715b6ca40576a6d24a306ad4d4a6ccbb2a44998a2bc690d0bd356f2a7bb2719
 EBUILD blueman-1.23-r2.ebuild 2490 SHA256 92e390db1c81b2154eadde0e35abe2175f78e375091f7850a4a3219f9820cfab SHA512 fce40c96a687d75fbeb738feab50b768066a4323a0e560e55558c094036c82a52c1a8c9f1a5c633d988038387d2a4ae3257208c22522048adc1822fd51ce582c WHIRLPOOL 8f40caa4d2898babed50fab254dc4f3daad6c5960765ed52494117bc9865e9036e4e97b94c14d67332db427981e6a07558900ea576d31bce30f723fa7427a858
 EBUILD blueman-1.23.ebuild 2320 SHA256 aa5c1bd87d4849767f93c2e83b7eeb97cdf399008182bf24eeccdfdf28115394 SHA512 86d193f87c2c542b13e62e2322c68be621c52f011ab3c2adbb20f055cda71ae80301210157cd4fbbfb8b0a10e45ca77c5ca16432db60d60937e9b6296d355884 WHIRLPOOL 13e0c84cc9fb3ab9f1fbe6544f77200bb5fe3ed59af1fa369c135ee9f86df9780e4c27e5193611b47b766364300a678900b84983acee7eb1430ba6dd5dffb304
+EBUILD blueman-1.23_p20140717.ebuild 2673 SHA256 214968d8ec18f4f37677b2e9b3077cd4ebe30256fa1806f4c7a1bf10db26b6a6 SHA512 f8329084205d70f641482a79b3630e8be034e5f0749e81513d43cfefb075fd75db888c4936a2e7f00f324b512ce9201b0d75f341390fd4b4c8d875e83ab51790 WHIRLPOOL d2d6994755f00845b705a542e2a0300b8189eb17dbadb4a01e9155afb8d7237f7272d4875dc0b5e22458dfb1cbffb1cb4f336e997e280063297ee16cf74cc018
 EBUILD blueman-9999.ebuild 2595 SHA256 fbac21587a1e9032e24e42adc749c89e8726cf90fe6a91049584d862b80a4c67 SHA512 faeb75d30cdb8d6cfa06375689515fc9745655d4d11263073a83c64755f681f3d8dc12c447aa06dad692fe9a7d2faca12ba04993f3d93728f2731a87d9d320fb WHIRLPOOL 172107d92fe2e94b519688b5e7c02475817981fce560a71ffec0c293c55e1e20dc5659160dc44f8de8e3e2276d8210b1c9fde41945580a1e848727d90ffdcc71
-MISC ChangeLog 4061 SHA256 a8d4a4c34de4063cdb4d6d6000d66def3bd15a136fde42018d06ea3cfea867a0 SHA512 2f5fb4d97af000fd61360520d4fb4a246144978f36e382e33d9785c2437135567fcce5c8428fb3ad4bf09d957d56af59a97a8cb615f0ecba1150d598af793b35 WHIRLPOOL 650b049e103eeddc44bc655b5c5bc0c75f77eb4f6db3bf168d296366f16fa42ca419ffa947a5aeda46be068c31c62b7e47e5d019a60dce2819e67dacda90448a
+MISC ChangeLog 4274 SHA256 40f9adb70e78b1ace06456efb7e3242bea20d5670243a87a39d44074b00ab71f SHA512 07417c9576387afb39ad588e9c160bdfe219a50ee891e9ea5c4e843f6775b617e1416a90e82617c0f46d1a5858a924bcbf26d7c52b23df0108eccde6c9cd28b2 WHIRLPOOL d5a68b85b6ba8eed635ccbeaa6bd042ffe5bcaf87e24c801bf7f7fe52db9a6fae360ba659aeb4d006e98731fa047d1a197a444bf8d74e032fa7682cc3e444283
 MISC metadata.xml 525 SHA256 706d61c1400fbeda6ada529e6f1864446171ca76e3c5f9799fc381ea5ac834ac SHA512 ad18fcc5b222c9f1d40c7dd30ec8fdef2d2756f79743027548be30d1a301ba324bb5d9fb0f45c3a812730a81ed849cd22c8a529f0c987b2f214d133186dc9aaf WHIRLPOOL 9a6b9224077931c83262cd8d9014a36ed3c520cfaddfd0f7bd8f7f2e4683a7b4d8597f839535b1cbada4dc4df8ede7bd6e85fa4ed60697bc23bc6caef364bc09
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCgAGBQJTcNmgAAoJEKXdFCfdEflK0SYP/jFZguGCZ8M2h5b25c5MB3Bs
-CzIza27SVqDlBub5iNOjr1FreHoDyNcGaZe+HihXLcl4k+AO9NbgOvcSC9Xj+4EC
-cRvourVdHDV1wmsQoKm8lfW7Ou0JtY4xtc8SFAd0kFAlLlsKyMbvxvwRWvfDDX6t
-VXlAYoKQFPWP+ar3yYNLxPhXjWg7CWWj5uHYGLL97IxUrUL+jtvl+MG7IW4tIIhK
-bAawExniDGTQXFFjdx/jwsXp/lIomk9MYdeX0vcbDaZDbz25Bg9KQ9tQ1VVXj5lz
-JxbSxaXje3kg04ja2rFwwQOup4/lKTB0e/1jJHoFTuoE0BUu0PtlKyKea1I6ocX5
-Or1gajtz73T82vdpuFD70Y934EIx0Uwk1A4S7pjtUEh76YV83C2Ga9hlIdEmSnHC
-90BsqLGiWBaVsnzXGuk645e7hVtKrD9GIptm+cgWgcohyUQ2Two/Mdh+OBjjALzF
-GqB1CYOoNPL1LCxM4E1ncEDzG5xVWZjKE7Xd3BglOsSkdkbUhpxuraSzXR6/clyn
-y71tepkIIigt09+I1AyWGtsYOhXHsHw5lDKiXTQsy1kuuvIHfPUn7lbPm1LAEuHv
-4d5JDppZAesNq8N4wHQ23rhmVi9mxF6ZriOuzL1IYc2wq/9ZocxWW0Oe01hDUM4x
-HFjnAVEw8VW5/iBgMAn1
-=pvF8
+iQIcBAEBCgAGBQJT2wHTAAoJEKXdFCfdEflKwdoQAIkvVUA6fF4NW/toaoHnLOTL
+vUetmXS9RAkG3jybPqWbAOikST01YuUveduB+0Mwr4pNyfebvzvmlZ1JMBRskgD7
+XUBSTL94ocMNnbLSYhFKG8GIAbn+UChtZcqvz1w0tltVGjZ/nXNBqTcE9CGTUlzb
+DpgjRFgVWjhjrUF/mKa/elpZBhSQ2/9TKzPM7ARvRI6f+Bg+cJP5ENYZSDtO1fHy
+RIoKOR+ZTrdRoDKEWBd/AEX5Mc+tz2rlK/V3fNs33rbawG9ZFoBZA+JaDWH5MTuk
+dKjJIC/ODe1GeYCVSBmZ6ewtC9rFzTwZRlQ8bOUbyJnTEfycM6uXnlelG6mPyl8t
+oSKDimsuUWfQF5g/Ok+Mnh3fGC3BHzK0abxsFfYE40MMqzA59uoM6AO4Jph6YlFn
+5Hv1oE9wvNMGy/+GVxLZW39YEN9DwJ/rTbU/N/IZx0B/T1CPt73VZ1QzsJ+yy0IF
+hl4eISOCht/Fb98K7XDnJAS0k5eIx8GzPAD72MEkEEB4TOwDCNSpp0gcahvSYODb
+GubpgmydC9YveFR7N0rqMF5OZ4NhyY0h7IixC7Z+YV59ZgVwaqDQa6ESWsEKgnIe
+mECzAlSJPENCABQ9afFDIND3e5CJClRN4AoVsZSz+onXrQC1XfGq1E2o4zypiV5f
+ThRAFfZgPZN9zQwbQbRW
+=GouD
 -----END PGP SIGNATURE-----
