@@ -10,27 +10,27 @@ AUX ceph.initd-r1 877 SHA256 343c247f1231f49246065ce050a477c75923a89cc4f42db4816
 AUX ceph.logrotate 491 SHA256 85f0b0c73a2c400bfff49609db45d995a2b2a2a0e64a88569deb3c353aa0b9d6 SHA512 7212fd04fd46ad2f86410cde145722ae15ca50ef1374d9c50fa8c980e869c1d2c9f68acbea94280223a489686f939d2ecc94dcf5607d8786671e8456a3174a3d WHIRLPOOL 88a04b5928da2a5461209f8799192f7970fed16cfd32891b98d825ecbbae850704ca4ff4dba560e92b2fb8189e36777430c391cfb2599d57f2a3318a0a8cce89
 DIST ceph-0.56.3.tar.bz2 3214620 SHA256 5ea39c9fce4741e0a4adb04262fa02d491834996c5819709463748095c9ad1b5 SHA512 b5f3ad54c81a9412f9219f99abb72efc6bc2010ccb29f1bf8a540b15e817ea7f7ccfaddea2b190739a0fba3dd378ac366006879ca66d6c9cafefe8baac0248e8 WHIRLPOOL 82e30278e352adfe3dd38c6bda49f8ae9abe49bab9e40d271d43bad6ad14c299c46fb51089fdb7216df96bc143a82c0073e735e26ae39c471dbe2b5b82d2fd7c
 DIST ceph-0.67.9.tar.bz2 3390731 SHA256 cc2f50641550e635324db1ffa0157fabacc8ccc820a250c3f4b51117c033e3ca SHA512 71b652ec2c30a168d4bc58d1bfa94ba4d235569a480681cab8a52c4b46e0b4d5b1c5fe04f3b921b3951dcd0dea8425cb0b531cd403c7edb3cee3cc44e3d30510 WHIRLPOOL 2602c232e8a0c3b80db15e01ea91dabb8e57a22a67e433d20713881d9569bc2adda9fd3e1fbe66efc71ab4c261c8c7bb7c71c48443da70cbf03bb693d8e1c21e
-DIST ceph-0.80.4.tar.bz2 4091820 SHA256 7be520b4c962120455572cf936776eb7afcc26c6a596e0322347104ae4fe14d9 SHA512 3ed3df5a79d7665c1cff3b3bd62dcf193fa2f4ef9a4e56b0d6d59203b45d1d4eda227ee475d89d2b3d036537a073264f60f482cf0147ac04d3c0898a91ff31b2 WHIRLPOOL 208c0d3aba47b0637e3b4255b28139725461366a02bf3c02a91bae30334761bd73ba32dd923136ca39baba556de329556a683d93e4743fe2afe2f7f0388627aa
+DIST ceph-0.80.5.tar.bz2 4084478 SHA256 912c53204e678f870e2a9650bb79101b0b2fcad2a60bd79c62a12fb0b811d371 SHA512 e0ea985330bebc7299a7e97655b0e3b26fdc042f2a2bd4e6e5bf1fcfeb6378ce3cd95d7bead3111e970d61f119177ce5bbcf51ee82d4228e83eba6f37ae686fb WHIRLPOOL 99cf5757386a9ffe879a480d56e7654b57c6722a0cee4e26418fb3e670cdb071fbac2ba29bfdc119a9e2d39a3d67975dc32a520222ac1239df5c30b27722c0b0
 EBUILD ceph-0.56.3.ebuild 2381 SHA256 94920bc6603dbec975b98985d42287fd6405ab112b26c8c8ca039df46ee8311c SHA512 021a42525996b60f87bc3c5a93c50c97c979fe76884e1769e9c2fbf7670dbd862599f26c801b60663894d6035ef1cb4ce2725dcaf655d19e78b650a119158cd2 WHIRLPOOL fe629a7295e2573f2aa888650f7b9fe120c37a8f9ac80accc26b80e7b0c2727d61442f4233ed0759af3bb98496cc4abe3b185bd654b7702636d49d4b3e4e247d
 EBUILD ceph-0.67.9.ebuild 3353 SHA256 12e15c7d0535d8fd7eea5a2de6da105d981fa6debc06dc66997d3f52c4df37cb SHA512 d05cb7f8de875d64eff7bd6b768dfbc0e4df4447d400ff17d2cf1b8688a18882ff7e8904957d31fe14bd969e10658eaf6a6653a0dbc20e01c618fee4ec76fd1e WHIRLPOOL 3b78fabb031e8ab219c9c531e680ecb548cc694cb2443f05b28235955b8ecf79157e3056b7cf0b154369dd75e2115ee2db5d031145afb5bb825583c8e9881b06
-EBUILD ceph-0.80.4.ebuild 3373 SHA256 73de9f0ca8d782ad26a526804fa02bfefc22f1fdba5e8b6467f6f0eeeae6004f SHA512 aaf4368c901373f06fb3adf6e137b0ea6124332192cc43d0366c5e60ec4bcb60745e5e19877c8a7debe653c23e8404f7a6a4def5f276b4a104e3f7a9903daad3 WHIRLPOOL 21637ba1524fbeb5df638d13eefbc59c9546f88ea524e840476ca781095d12b6af1d26f5d14d31f846f292a625f7ad4e165d4e58bab4c2aac9e8e260db7df3fc
+EBUILD ceph-0.80.5.ebuild 3373 SHA256 9abb1e815b0be22edc3ca6d0431d71a0a521a74843937dce53120c8b2f18084b SHA512 fd87418aa76aed544cb73f1f74afc22c60444c9432136da41e6684410dc7e1a2c7c145bd727bab755575c68dccaeb0a7c277b4522229565c1a1d2bc1e8099b65 WHIRLPOOL 4fdc27c63595c7cbdd45b4a2d2878225218dafd6d9dd418385174af084a9aa0f59ace7936cc2fa8e373d4aaaa568e1d876c2c3db35e6f354451bd448fa12decc
 EBUILD ceph-9999.ebuild 3280 SHA256 7b88714e594845998472b57b2d3ef275e0a7d46e83d848e50772655b42b01306 SHA512 5d4da94b2479c855268d269a9eff4a27852434116216f0bb7c70188c1c4c8d4cf07ee23c3bd9327a4c843f9d28deb6fa137d3246d0b47c6e03e19c19fefc5f09 WHIRLPOOL f7357c89b67a6c4d364cbf0ed70a1667452f1673f679f87495e6a87ad624ac2b21d910c4a91653ac7495b40228ff272e289fa1d9f3f49163ed1ebd3aea28779c
-MISC ChangeLog 10038 SHA256 a9077832d6710919a44e75d310df205b7b89768f79e5017f8aced04f31df7f7e SHA512 cbdffaee5f0519cf145e4d5f6535d5bcd5286d2b537e27bf8d0985070b161234180088a81322aef954423309cd045bc97232989115880a55a8fd3e13d947273e WHIRLPOOL 7922fb5251ffff0ea24d086378e5dffd10e7ddcb159bbafee7f2501c8f3f1225d5caa22293c30be97d30539fe661bbd76936d0bef0f37195294596b03a9f974c
+MISC ChangeLog 10172 SHA256 11525438ef6c83ba66887ba9dc620c6f4c8360d78d728fa750c4d74bd4b85211 SHA512 7ef505262c6aad561c5f62c580684598b30cc26a5a476e1d597d937726fedda7a9af06abe4954450d586d257e3c9ca17d916b0ac6b21e9a410e91695dcf755ae WHIRLPOOL d1db30ca05c4fbbf4134697ba4a8292798a268c3e16326f492cfa4911ecbbef0aa996f244a6a27af296b1d62adb87e7a5091eab7aa33d68d6e900670d7659814
 MISC metadata.xml 948 SHA256 72989673dd794fc1d9e83509d15991407862cd2c4817bcad130018442ca4b866 SHA512 4bd4189f1f5f181c915a7afac73dd774a877aae27026cd5c2ad32a89591ec6dcc0deb4ca1fb572d5f517d1cfa1edb94a345c6b0c03a39b1904ab8882e972ff5c WHIRLPOOL a89a309c10b0422e5045b7a1e62561efeda3125e35172fb33feea87fb44c14ae08cdf4810bb0acdc8eda8f856987d11ed77c157809635fe0a984764ee3b73ce8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTyMFTAAoJEJIMDbyqvv1VWuUP/15wQwhE56Jmb6eVuNCUMiat
-3FXpBqOYaTu+Cd4R7RYMyMy+CUu81HKo1p72t4/3/CuBozYHf2kFNP+nE0LXStwd
-behbOxf3GVfKB7cVwT5KBhDQO8nNhRWgWZyeb0TZHisrTjdZmPgCiUm59R5XLYlr
-FnegiA9F7i18vX5EXdGksDUTPJ+ae7kGKFSyk3YYXoIanAUxU/jxqa0xqpLvr1nT
-Pw5bYYFodRLq0IdTmHtC3f+eOKzlOJYZkNUvGVIisaCjnvYl+QDXbSW9oBEQvAwD
-VhIguu6gn323EZ6BlQaIDqU2qQzuuJ+xbvmZc89uLMnIjNDpVXPXbN/BYlT8fFPr
-PCqhGd1E7NrrGlB2UIOkWW7SzzE1fXpxloq9koVwB+5nu9o/YRAqh6eEyIQxPBEB
-fbZnSlj1B750/IvN3bN0SMBsWE5E2D5fPOgbKNazfOrhP0PliVTc6IN0f0Bovgvm
-Munq1OSn//KGXPryL317rlXXsB1a7Km5lqYnc9o7g3EA1cmwoNU9+lN9/PFm7IuO
-W32l8mIZvBUngZiMh5+YMNqxgPytkrDG4sVZsxTMSq6J+8Xm3T+QwKy0E67lfjkQ
-tJvVQRbeZKPtvs44yeNpbjRMPnBUnTxwuFNrP9FesCSX/mOBLk9m/AEcAj0mEAyr
-mL3Q7X66916xIJerxkzy
-=BR+i
+iQIcBAEBCAAGBQJT2vtyAAoJEJIMDbyqvv1V/f8P+wZ82L88CD64K90Ph9VxIdld
+S8SdQ8aMIWSBrms75SyFw4DsWd7JE3t+mHVsx5Qcoz1nGqbgaib2ntOBD+D/ePDZ
+8BhOO8wskLeJoVPjyz/eE/8/NUGiALUGRX1dmANI45A9WgYd3y+D/dALu/1XOTbT
+2wAHheImm69gWCds6LRQf7qMyBVYTOQEZRdizeqgODxa4Mq9PRRAVgo5t+3b6xu5
+nxEWq83Z2C5eueoqa6XUC1/DDyx3dwxMYgeyCoo7lbS/NqJhq9n8Eqvl1dkifzMz
+Wwy4AfW2FW7gyhqwhhT0YrzinX8gbmSyokMaPE9jLExvqYJOqOqd7nd+qTSSzn5q
+eu34855dEkfwlYvYehYEQlbdfD9o5dj9AFrI/HdMmI4nb8gWc5qmuTpMYoJtW3i1
+pck/CXPT4E0qgZVaH3v92e2XUrmi/vl2jQJ+wSXalIPOAp5/aGPO//ZSASC49FRL
+7VNdNsdhDuLn0NmenzATLpP3FqMnIidbpfFoEgmvE1Ae46mdl00md8aCuQmcjBrU
+LxjB//2RokT5P978NcUH7KnlSUn4YgTrjbzCqubFrpaLq78dkdf0Tb0bfYSU1eRo
+hBaRxNqHNzSACD93fIBvhosOyBbBftYhu9u6qN5XTqVGVlRQk9VrM/Bjrm3L2vC/
+0xoLJfip0ghOntf4u06o
+=e/B7
 -----END PGP SIGNATURE-----
