@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/ceph
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ceph/ChangeLog,v 1.54 2014/07/18 06:42:13 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ceph/ChangeLog,v 1.55 2014/08/01 02:31:42 dlan Exp $
+
+*ceph-0.80.5 (01 Aug 2014)
+
+  01 Aug 2014; Yixun Lan <dlan@gentoo.org> -ceph-0.80.4.ebuild,
+  +ceph-0.80.5.ebuild:
+  bump & drop old
 
 *ceph-0.80.4 (18 Jul 2014)
 *ceph-0.67.9 (18 Jul 2014)
