@@ -1,6 +1,13 @@
 # ChangeLog for net-wireless/blueman
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/blueman/ChangeLog,v 1.19 2014/05/12 14:22:17 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/blueman/ChangeLog,v 1.20 2014/08/01 02:52:09 zerochaos Exp $
+
+*blueman-1.23_p20140717 (01 Aug 2014)
+
+  01 Aug 2014; Rick Farina <zerochaos@gentoo.org>
+  +blueman-1.23_p20140717.ebuild:
+  adding snapshot of git for bluez-5 support, been using it for weeks and
+  working well
 
   12 May 2014; Rick Farina <zerochaos@gentoo.org> blueman-9999.ebuild:
   upstream merged the bluez5 branch into master
